Change namespace and file name

--- a/BotTradingCryto.Infrastructure/BotTradingCrypto.Infrastructure.csproj
+++ b/BotTradingCryto.Infrastructure/BotTradingCrypto.Infrastructure.csproj
@@ -8,11 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Binance.Net" Version="11.1.0" />
+    <PackageReference Include="Binance.Net" Version="11.3.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BotTradingCryto.Application\BotTradingCryto.Application.csproj" />
+    <ProjectReference Include="..\BotTradingCryto.Application\BotTradingCrypto.Application.csproj" />
   </ItemGroup>
 
 </Project>
