--- a/BotTradingCryto.Application/BotTradingCrypto.Application.csproj
+++ b/BotTradingCryto.Application/BotTradingCrypto.Application.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BotTradingCryto.Domain\BotTradingCryto.Domain.csproj" />
+    <ProjectReference Include="..\BotTradingCryto.Domain\BotTradingCrypto.Domain.csproj" />
   </ItemGroup>
 
 </Project>
