--- a/BotTradingCryto.Worker/BotTradingCrypto.Worker.csproj
+++ b/BotTradingCryto.Worker/BotTradingCrypto.Worker.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BotTradingCryto.Application\BotTradingCryto.Application.csproj" />
-    <ProjectReference Include="..\BotTradingCryto.Domain\BotTradingCryto.Domain.csproj" />
-    <ProjectReference Include="..\BotTradingCryto.Infrastructure\BotTradingCryto.Infrastructure.csproj" />
+    <ProjectReference Include="..\BotTradingCryto.Application\BotTradingCrypto.Application.csproj" />
+    <ProjectReference Include="..\BotTradingCryto.Domain\BotTradingCrypto.Domain.csproj" />
+    <ProjectReference Include="..\BotTradingCryto.Infrastructure\BotTradingCrypto.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
