--- a/BotTradingCryto.Worker/Properties/launchSettings.json
+++ b/BotTradingCryto.Worker/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "BotTradingCryto.Worker": {
+    "BotTradingCrypto.Worker": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
