--- a/BotTradingCryto.Domain/BotTradingCrypto.Domain.csproj
+++ b/BotTradingCryto.Domain/BotTradingCrypto.Domain.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="3.4.2" />
+  </ItemGroup>
+
 </Project>
